# dir2json

./: .gitignore  README.md  dir2json.py  pyproject.toml  test.json
