[tool.poetry]
name = "dir2json"
version = "0.1.0"
description = "Collect information about a directory tree and output to json file."
authors = ["Reed Kelly <reed.origami@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
